# risc0

./: .gitignore  .gitmodules  Cargo.toml  clippy.py
.github/containers/release/: Dockerfile
.github/workflows/: main.yml
benchmarks/: Cargo.toml
benchmarks/src/: lib.rs  main.rs
bonsai/examples/governance/: Cargo.toml  README.md
bonsai/examples/governance/contracts/: BonsaiGovernor.sol  ImageID.sol
bonsai/examples/governance/methods/: Cargo.toml
bonsai/examples/governance/script/: Deploy.s.sol
bonsai/examples/governance/tests/: Elf.sol  Governor.t.sol
book/: book.toml
book/src/: SUMMARY.md  output.md
compact_proof/: README.md
compact_proof/groth16/: stark_verify.circom
examples/: Cargo.toml
examples/composition/methods/guest/src/: main.rs
examples/composition/src/: main.rs
examples/ecdsa/: Cargo.toml
examples/ecdsa/methods/guest/: Cargo.toml
examples/fhe/: Cargo.toml
examples/fhe/core/: Cargo.toml
examples/fhe/core/src/: lib.rs
examples/fhe/methods/: Cargo.toml
examples/fhe/methods/guest/: Cargo.toml
examples/fhe/methods/guest/src/: main.rs
examples/fhe/src/: main.rs
examples/sha/src/: main.rs
risc0/binfmt/: Cargo.toml
risc0/binfmt/src/: image.rs  lib.rs  sys_state.rs
risc0/cargo-risczero/: Cargo.toml
risc0/cargo-risczero/src/: lib.rs
risc0/cargo-risczero/src/commands/: config.toml  mod.rs
risc0/cargo-risczero/src/commands/bench/: loop.s  mod.rs
risc0/circuit/bigint/: BUILD.bazel  Cargo.toml
risc0/circuit/bigint/methods/guest/: Cargo.toml
risc0/circuit/bigint/methods/guest/src/: main.rs
risc0/circuit/bigint/src/: bigint.rs.inc  byte_poly.rs  codegen_prelude.rs  control_id.rs  guest.rs  host.rs  lib.rs  rsa.rs  rsa_tests.rs  zkr.rs
risc0/circuit/recursion/src/: control_id.rs  cpu.rs  lib.rs  poly_ext.rs  taps.rs
risc0/circuit/rv32im-sys/cxx/: poly_fp.cpp  step_compute_accum.cpp  step_exec.cpp  step_verify_accum.cpp  step_verify_bytes.cpp  step_verify_mem.cpp
risc0/circuit/rv32im-sys/kernels/cuda/: eval_check.cu  step_compute_accum.cu  step_exec.cu  step_verify_accum.cu  step_verify_bytes.cu  step_verify_mem.cu
risc0/circuit/rv32im-sys/kernels/metal/: eval_check.metal  step_compute_accum.metal  step_verify_accum.metal
risc0/circuit/rv32im/src/: control_id.rs  info.rs  layout.rs.inc  lib.rs  poly_ext.rs  taps.rs
risc0/circuit/rv32im/src/prove/emu/preflight/: tests.rs
risc0/circuit/rv32im/src/prove/engine/: mod.rs  witgen.rs
risc0/common/: Cargo.toml  README.md
risc0/common/src/: lib.rs
risc0/core/src/field/: mod.rs
risc0/groth16/: Cargo.toml
risc0/groth16/src/: data_structures.rs  docker.rs  lib.rs  verifier.rs
risc0/zkp/src/: adapter.rs  cfg.rs  lib.rs  taps.rs
risc0/zkp/src/hal/: cpu.rs  mod.rs
risc0/zkp/src/prove/: merkle.rs  poly_group.rs  prover.rs
risc0/zkp/src/verify/: mod.rs
risc0/zkvm/: Cargo.toml  build.rs
risc0/zkvm/benches/: fib.rs
risc0/zkvm/examples/: fib.rs  loop.rs  recursion.rs
risc0/zkvm/methods/: Cargo.toml
risc0/zkvm/methods/c-kzg/: Cargo.toml
risc0/zkvm/methods/guest/: Cargo.toml
risc0/zkvm/methods/src/: bigint.rs  kzg_common.rs  lib.rs  multi_test.rs
risc0/zkvm/platform/: Cargo.toml  build.rs
risc0/zkvm/platform/macros/: Cargo.toml
risc0/zkvm/platform/macros/src/: lib.rs
risc0/zkvm/platform/src/: cfg.rs  lib.rs  rust_rt.rs  syscall.rs
risc0/zkvm/src/: bigint.rs  fault_checker.elf  fault_ids.rs  fault_state.rs  lib.rs  receipt.rs  session.rs
risc0/zkvm/src/binfmt/: image.rs
risc0/zkvm/src/exec/: ecall.rs  gdb.rs  io.rs  memory.rs  mod.rs  monitor.rs  profiler.rs  rv32im.rs  syscall.rs  tests.rs
risc0/zkvm/src/guest/: bigint.rs  env.rs  mod.rs
risc0/zkvm/src/host/: receipt.rs
risc0/zkvm/src/host/recursion/: tests.rs
risc0/zkvm/src/host/server/: session.rs
risc0/zkvm/src/host/server/exec/: executor.rs  tests.rs
risc0/zkvm/src/host/server/prove/: tests.rs
risc0/zkvm/src/prove/: exec.rs  gdb.rs  loader.rs  mod.rs  tests.rs
risc0/zkvm/src/receipt/: compact.rs  composite.rs  segment.rs  succinct.rs
risc0/zkvm/src/recursion/: cpp.rs  ffi.rs  mod.rs  receipt.rs
rzup/: Cargo.toml
rzup/src/: extension.rs  main.rs
rzup/src/cli/: extension.rs
tools/afl-fuzzing/: Cargo.toml  README.md
tools/afl-fuzzing/corpus/: method_name
web/: package.json
web/apps/benchmarks-and-reports/: next.config.js
web/apps/benchmarks-and-reports/src/: env.ts
web/apps/benchmarks-and-reports/src/app/(benchmarks-and-reports)/[version]/applications-benchmarks/[slug]/_components/: applications-benchmarks-table-schema.ts
web/apps/benchmarks-and-reports/src/app/(benchmarks-and-reports)/[version]/datasheet/_components/: datasheet-table-schema.ts
web/apps/benchmarks-and-reports/src/app/(benchmarks-and-reports)/crates-validation/_components/: crates-io-validation-table-schema.ts
website/static/: proof-system-in-detail.tex
xtask/src/: bootstrap_groth16.rs
