[package]
name = "fhe-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
fhe-core = { path = "core" }
fhe-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
serde = "1.0"
tfhe = { version = "0.3.1", features = ["aarch64-unix", "integer"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
