[package]
name = "risc0-binfmt"
description = "RISC Zero binary format crate"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
anyhow = { version = "1.0" }
elf = "0.7"
risc0-zkp = { workspace = true }
risc0-zkvm-platform = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "std"] }
log = "0.4"
test-log = { version = "0.2", features = ["trace"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
env_logger = "0.10"
