[package]
name = "risc0-common"
description = "Common types for managing RISC Zero datatypes"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { version = "1.0" }
risc0-zkvm = { workspace = true, optional = true, default-features = false, features = ["prove"] }
thiserror = "1.0"
bincode = { version = "1.3", optional = true }

[dev-dependencies]

[features]
default = ["zkvm"]
zkvm = ["dep:risc0-zkvm", "dep:bincode"]