[workspace]
resolver = "2"
members = ["methods"]

[workspace.dependencies]
hex = { version = "0.4" }

bonsai-ethereum-relay = { path = "../../../bonsai/ethereum-relay" }
bonsai-sdk = { path = "../../../bonsai/sdk" }
methods = { path = "./methods", package = "governance-methods" }
# risc0-build = { path = "../../../risc0/build", features = ["docker"]}
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.7" }
risc0-zkp = { version = "0.20", default-features = false }
risc0-zkvm = { path = "../../../risc0/zkvm", default-features = false }
risc0-build = { git = "https://github.com/risc0/risc0", rev = "7f731662", features = ["docker"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
