[package]
name = "governance-methods"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true, features = ["guest-list"] }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dependencies]
risc0-build = { workspace = true, features = ["guest-list"] }

[dev-dependencies]
hex-literal = "0.4"
risc0-zkvm = { workspace = true }

[features]
default = []
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]
