[workspace]

# Without resolver = "2", it seems that sometimes features get enabled
# in the guest based on features required by build dependencies.  If
# resolver = "2" causes other problems, this may need to be
# investigated further.
resolver = "2"

[package]
name = "risc0-zkvm-methods-c-kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = { version = "0.3.11", features = ["no-threads"] }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", rev = "304eacb4f5fec09e837936e4ada6705ecac581f0", default-features = false }
rand = "0.8.5"
risc0-zkvm = { path = "../..", default-features = false, features = [
  "std",
  "getrandom",
] }
risc0-zkvm-methods = { path = "..", default-features = false, features = ["c-kzg"]}
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", rev = "244dc3b08788f7a4ccce14c66896ae3b4f24c166"}

[profile.release]
lto = true
opt-level = 3

[profile.release.package.risc0-zkvm-methods-c-kzg]
# Include debug symbols so we can test the profiler.
debug = 1

[package.metadata.release]
release = false
